# gdx-gltf-KHR

./: README.md  build.gradle  settings.gradle
gltf/: build.gradle
gltf/jni/: CMakeLists.txt  basis_transcoder.cpp  meshopt_jni.cpp
gltf/src/net/mgsx/gltf/basis/: BasisTranscoder.java
gltf/src/net/mgsx/gltf/data/data/: MeshoptBufferViewExtension.java
gltf/src/net/mgsx/gltf/data/texture/: EXTTextureWebp.java  KHRTextureBasisu.java
gltf/src/net/mgsx/gltf/loaders/glb/: BinaryDataFileResolver.java
gltf/src/net/mgsx/gltf/loaders/shared/: GLTFLoaderBase.java
gltf/src/net/mgsx/gltf/loaders/shared/data/: AccessorBuffer.java  DataFileResolver.java  DataResolver.java
gltf/src/net/mgsx/gltf/loaders/shared/geometry/: MeshLoader.java
gltf/src/net/mgsx/gltf/loaders/shared/texture/: ImageResolver.java  PixmapBinaryLoaderHack.java  TextureResolver.java
gltf/src/net/mgsx/gltf/meshopt/: MeshoptDecoder.java
gltf/src/net/mgsx/gltf/scene3d/model/: NodePlus.java
ibl-composer/: build.gradle
